clusters/common/apps/rajsingh/gateway/gateway-cdn.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cdn
  labels:
    external-dns: rajsingh
spec:
  gatewayClassName: rajsingh-cdn
  listeners:
    - name: wildcard-cdn-rajsingh-info-https
      protocol: HTTPS
      port: 443
      hostname: "*.cdn.rajsingh.info"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: wildcard-cdn-rajsingh-info
    - name: http
      port: 80
      protocol: HTTP
